fade-in effect everywhere

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- ////////////////////////////////HOME////////////////////////////////// -->
 
   <div class='body'>
-    <section id='home' class='row'>
+    <section id='home' class='row fade-in'>
       <div id='home-div'>
         <!-- <div> -->
         <h1 id='name'>Evan Doherty</h1>
@@ -80,22 +80,7 @@
         <button id='intro-btn'> <a id='intro-anchor' class='scroll' href="#portfolio">Check out my work</a> </button>
         <!-- </div> -->
       </div>
-      <!-- <div id='home-div'>
-        <div id='home-img' class='sm-col-12 col-md-4 col-lg-3'>
-          <img id='headshot' src="assets/headshot.png" alt="headshot">
-        </div>
-        <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
-          <ul class='home-about'>
-            <li>
-              My name is Evan Doherty.
-            </li>
-            <li>
-              I am a full-stack software engineer with a degree in mathematics and a
-              passion for music and surfing.
-            </li>
-          </ul>
-        </div>
-      </div> -->
+
     </section>
     <!-- ///////////////////////////////////////////////////////////////////// -->
 
@@ -110,11 +95,11 @@
 
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
-            <h1 class='card-title'>Travel Book</h1>
-            <div class='img-container'>
+            <h1 class='card-title fade-in'>Travel Book</h1>
+            <div class='img-container fade-in'>
               <div id="tbCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators fade-in">
                   <li data-target="#tbCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#tbCarousel" data-slide-to="1"></li>
                   <li data-target="#tbCarousel" data-slide-to="2"></li>
@@ -155,7 +140,8 @@
               <div class='card-body'>
 
                 <!-- <p class='card-text'>iOS app for logging every detail of your trip.</p> -->
-                <p class='card-text'>With Travel Book, users can easily keep track of the places they have visited, the
+                <p class='card-text fade-in'>With Travel Book, users can easily keep track of the places they have
+                  visited, the
                   photos they
                   have taken, and
                   even the
@@ -167,7 +153,7 @@
                   photos.
                   And since everything
                   for that cool trip you went on is in one place, it's easier to share with your friends.</p>
-                <div class='tags d-flex flex-row flex-wrap'>
+                <div class='tags d-flex flex-row fade-in flex-wrap'>
                   <button>MongoDB</button>
                   <button>Express</button>
                   <button>React-Native</button>
@@ -179,7 +165,7 @@
                 </div>
               </div>
             </div>
-            <div class='code-link-div'>
+            <div class='code-link-div fade-in'>
               <a class='code-link' target="_blank" href='https://github.com/edoherty77/travel-book-api'>Check Out The
                 Code</a>
             </div>
@@ -190,11 +176,11 @@
 
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
-            <h1 class='card-title'>Vote-ify</h1>
+            <h1 class='card-title fade-in'>Vote-ify</h1>
             <div class='img-container'>
               <div id="voteCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators fade-in">
                   <li data-target="#voteCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#voteCarousel" data-slide-to="1"></li>
                   <li data-target="#voteCarousel" data-slide-to="2"></li>
@@ -230,7 +216,8 @@
               <div class='card-body'>
 
                 <!-- <p class='card-text'>Listen, search, and vote using Spotify's API.</p> -->
-                <p class='card-text'>Vote-ify brings Democracy to playlists. Using the Spotify API, users can listen to
+                <p class='card-text fade-in'>Vote-ify brings Democracy to playlists. Using the Spotify API, users can
+                  listen to
                   and contribute
                   songs to 12
                   playlists,
@@ -241,7 +228,7 @@
                   earn
                   enough votes to be
                   officially added to the playlist.</p>
-                <div class='d-flex flex-row flex-wrap tags'>
+                <div class='d-flex flex-row flex-wrap fade-in tags'>
                   <button>MongoDB</button>
                   <button>Express</button>
                   <button>ReactJS</button>
@@ -251,7 +238,7 @@
                 </div>
               </div>
             </div>
-            <div class='code-link-div'>
+            <div class='code-link-div fade-in'>
               <a class='code-link' target="_blank" href='https://github.com/sjaugmented/project3-client'>Check Out The
                 Code</a>
             </div>
@@ -263,11 +250,11 @@
 
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
-            <h1 class='card-title'>Sudoku</h1>
+            <h1 class='card-title fade-in'>Sudoku</h1>
             <div class='img-container'>
               <div id="sudokuCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators fade-in">
                   <li data-target="#sudokuCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#sudokuCarousel" data-slide-to="1"></li>
                   <li data-target="#sudokuCarousel" data-slide-to="2"></li>
@@ -303,7 +290,7 @@
                   as
                   hints, undo, and pause.</p>
 
-                <div class='d-flex flex-row tags'>
+                <div class='d-flex flex-row fade-in tags'>
                   <button>Javascript</button>
                   <button>HTML</button>
                   <button>CSS</button>
@@ -311,7 +298,7 @@
                 </div>
               </div>
             </div>
-            <div class='code-link-div'>
+            <div class='code-link-div fade-in'>
               <a class='code-link' target="_blank" href='https://github.com/edoherty77/GA-Project-1-Game-App'>Check Out
                 The Code</a>
             </div>
@@ -320,11 +307,11 @@
 
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-12 mb-3'>
           <div class='card project-card'>
-            <h1 class='card-title'>Let's Chat</h1>
+            <h1 class='card-title fade-in'>Let's Chat</h1>
             <div class='img-container'>
               <div id="chatCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators fade-in">
                   <li data-target="#chatCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#chatCarousel" data-slide-to="1"></li>
                   <li data-target="#chatCarousel" data-slide-to="2"></li>
@@ -366,7 +353,8 @@
               <div class='card-body'>
 
                 <!-- <p class='card-text'>Education-based chat app.</p> -->
-                <p class='card-text'>As a GA student, I frequently used Slack as a means of communication and education.
+                <p class='card-text fade-in'>As a GA student, I frequently used Slack as a means of communication and
+                  education.
                   Our main
                   channel was
                   populated with useful
@@ -380,7 +368,7 @@
                   by
                   selecting
                   their desired tag.</p>
-                <div class='d-flex flex-row tags'>
+                <div class='d-flex flex-row fade-in tags'>
                   <button id='test'>MongoDB</button>
                   <button class='express'>Express</button>
                   <button>Node.JS</button>
@@ -410,7 +398,7 @@
       </h1>
 
       <div class='row skills' id='skills-row'>
-        <div class='col-12 card-container mb-3'>
+        <div class='col-12 fade-in card-container mb-3'>
           <div class='card skill-card'>
             <div class='left-div slide-in from-left backend'>
               <p class='left-text'>
@@ -431,7 +419,7 @@
           </div>
         </div>
 
-        <div class='col-12 card-container mb-3'>
+        <div class='col-12 fade-in card-container mb-3'>
           <div class='card skill-card'>
             <div class='left-div slide-in from-left frontend'>
               <p class='left-text'>
@@ -453,7 +441,7 @@
           </div>
         </div>
 
-        <div class='col-12 card-container mb-3'>
+        <div class='col-12 fade-in card-container mb-3'>
           <div class='card skill-card'>
             <div class='left-div slide-in from-left apis'>
               <p class='left-text'>
@@ -555,7 +543,7 @@
           </div>
         </div>
         <div id='am-2' class='am row'>
-          <div class='am-text col-xs-12'>Growing up I played lacrosse, wrestled and surfed, as any good Long
+          <div class='am-text fade-in col-xs-12'>Growing up I played lacrosse, wrestled and surfed, as any good Long
             Island native
             would.
             I
@@ -564,7 +552,7 @@
             up at 6 AM for a snack and go back to sleep).
             I work hard, play hard, but most of all, I code hard.
           </div>
-          <div class='am-text col-xs-12'>After graduating from UNCW, I knew I had a passion for mathematics and
+          <div class='am-text fade-in col-xs-12'>After graduating from UNCW, I knew I had a passion for mathematics and
             problem-solving
             but didn't know
             how I wanted to
