styling on link to code button

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     <!-- ////////////////////////////////ABOUT ME////////////////////////////////// -->
     <section class='row' id='about'>
       <h1 class='col-12 fade-in section-header'>
-        Who Am I?
+        Who I Am
       </h1>
       <div class='col-12 fade-in about-container'>
         <div id='am-1' class='am row'>
@@ -578,7 +578,7 @@
 
     <footer class='row' id='contact-row'>
       <h1 class='col-12 fade-in contact section-header'>
-        Contact Me
+        Connect With Me
       </h1>
 
       <div class='info-div fade-in col-sm-12 col-md-6'>
