travel book editing

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
               <div class='card-body'>
 
                 <!-- <p class='card-text'>iOS app for logging every detail of your trip.</p> -->
-                <p class='card-text fade-in'>With Travel Book, users can easily keep track of the places they have
+                <p class='card-text fade-in'>Travel Book is a mobile app where users can easily keep track of the places
+                  they have
                   visited, the
                   photos they
                   have taken, and
