travel book editing

--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
 
                 <!-- <p class='card-text'>iOS app for logging every detail of your trip.</p> -->
                 <p class='card-text fade-in'>Travel Book is a mobile app where users can easily keep track of the places
-                  they have
+                  they've
                   visited, the
-                  photos they
-                  have taken, and
+                  photos they've taken, and
                   even the
-                  miles they have traveled. With the help of Google Maps and Places, and implementing MongoDB, Express,
+                  miles they've traveled. With the help of Google Maps and Places, and implementing MongoDB, Express,
                   React
                   Native and Node,
                   users can not only check-in to their current location with just the touch of a button, but can also
