travel book editing

--- a/index.html
+++ b/index.html
@@ -145,14 +145,12 @@
                   visited, the
                   photos they've taken, and
                   even the
-                  miles they've traveled. With the help of Google Maps and Places, and implementing MongoDB, Express,
-                  React
-                  Native and Node,
-                  users can not only check-in to their current location with just the touch of a button, but can also
+                  miles they've traveled. Users can not only check-in to their current location with just the touch of a
+                  button, but can also
                   add
                   photos.
                   And since everything
-                  for that cool trip you went on is in one place, it's easier to share with your friends.</p>
+                  for that cool trip you went on is all in one place, it's easier to share with your friends.</p>
                 <div class='tags d-flex flex-row fade-in flex-wrap'>
                   <button>MongoDB</button>
                   <button>Express</button>
