--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
 
     <footer class='row' id='contact-row'>
       <h1 class='col-12 fade-in contact section-header'>
-        Connect With Me
+        Let's Connect
       </h1>
 
       <div class='info-div fade-in col-sm-12 col-md-6'>
@@ -608,13 +608,6 @@
 
     <!-- ///////////////////////////////////////////////////////////////////// -->
   </div>
-
-
-
-
-
-
-
 
 
   <script type=" text/javascript" src="index.js"></script>
