about me section editing

--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
             a renowned chef, but was soon introduced to coding. I immediately realized my calling.
             I continued to work under my father as I got serious about coding, taking courses and expanding my
             expertise.
-            I topped off my web-development education with General Assembly Bootcamp and am excited to jumpstart my new
-            career.
+            During the pandemic I added to my web-development education by taking the Full Stack Software Engineering
+            bootcamp with General Assembly.
           </div>
         </div>
       </div>
