--- a/index.html
+++ b/index.html
@@ -560,7 +560,8 @@
             a renowned chef, but was soon introduced to coding. I immediately realized my calling.
             I continued to work under my father as I got serious about coding, taking courses and expanding my
             expertise.
-            During the pandemic I added to my web-development education by taking the Full Stack Software Engineering
+            Once the pandemic hit, I took the opportunity of having free time to further my education by taking the Full
+            Stack Software Engineering
             bootcamp with General Assembly.
           </div>
         </div>
