--- a/index.html
+++ b/index.html
@@ -552,13 +552,14 @@
             problem-solving
             but didn't know
             how I wanted to
-            apply it in my professional career. So, I spent a year in Nicaragua, reigniting my passion for surfing and
+            apply it in my professional career. So, I spent a year in Nicaragua, continuing to follow my passion for
+            surfing and
             teaching.
             Once I returned, I considered getting my teaching degree or going into business with my father,
             a renowned chef, but was soon introduced to coding. I immediately realized my calling.
             I continued to work under my father as I got serious about coding, taking courses and expanding my
             expertise.
-            Once the pandemic hit, I took the opportunity of having free time to further my education by taking the Full
+            Once the pandemic hit, I took advantage of my free time to broaden my skills by taking the Full
             Stack Software Engineering
             bootcamp with General Assembly.
           </div>
