--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
             a renowned chef, but was soon introduced to coding. I immediately realized my calling.
             I continued to work under my father as I got serious about coding, taking courses and expanding my
             expertise.
-            During the pandemic, I took advantage of my free time to broaden my skills by taking the Full
+            During the pandemic I took advantage of my free time to broaden my skills by taking the Full
             Stack Software Engineering
             bootcamp with General Assembly.
           </div>
