--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="assets/tb_6.png" alt="tb_6" style="width:100%;">
+                  <div class="item active ">
+                    <img src="assets/tb.png" alt="tb" style="width:100%;">
                   </div>
                   <div class="item">
-                    <img src="assets/tb.png" alt="tb" style="width:100%;">
+                    <img src="assets/tb_6.png" alt="tb_6" style="width:100%;">
                   </div>
                   <div class="item">
                     <img src="assets/tb_2.png" alt="tb_2" style="width:100%;">
@@ -188,6 +188,9 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
+                    <img src="assets/vote_5.png" alt="vote_5" style="width:100%;">
+                  </div>
+                  <div class="item">
                     <img src="assets/vote.png" alt="vote" style="width:100%;">
                   </div>
                   <div class="item">
@@ -195,9 +198,6 @@
                   </div>
                   <div class="item">
                     <img src="assets/vote_4.png" alt="vote_4" style="width:100%;">
-                  </div>
-                  <div class="item">
-                    <img src="assets/vote_5.png" alt="vote_5" style="width:100%;">
                   </div>
                 </div>
 
@@ -314,12 +314,15 @@
                   <li data-target="#chatCarousel" data-slide-to="1"></li>
                   <li data-target="#chatCarousel" data-slide-to="2"></li>
                   <li data-target="#chatCarousel" data-slide-to="3"></li>
-                  <li data-target="#chatCarousel" data-slide-to="4"></li>
+                  <!-- <li data-target="#chatCarousel" data-slide-to="4"></li> -->
                 </ol>
 
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                   <div class="item active">
+                    <img src="assets/chat_5.png" alt="chat_5" style="width:100%;">
+                  </div>
+                  <div class="item">
                     <img src="assets/chat.png" alt="chat" style="width:100%;">
                   </div>
 
@@ -330,12 +333,9 @@
                   <div class="item">
                     <img src="assets/chat_3.png" alt="chat_3" style="width:100%;">
                   </div>
-                  <div class="item">
+                  <!-- <div class="item">
                     <img src="assets/chat_4.png" alt="chat_4" style="width:100%;">
-                  </div>
-                  <div class="item">
-                    <img src="assets/chat_5.png" alt="chat_5" style="width:100%;">
-                  </div>
+                  </div> -->
                 </div>
 
                 <!-- Left and right controls -->
