pb on edu-container

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       </h1>
       <div class='row edu-row'>
 
-        <div class='col-sm-12 fade-in col-lg-6 edu-container mb-3'>
+        <div class='col-sm-12 fade-in col-lg-6 edu-container'>
           <div class='edu-card'>
 
             <div class='d-flex flex-row edu-header'>
@@ -495,7 +495,7 @@
         </div>
 
 
-        <div class='col-sm-12 fade-in col-lg-6 edu-container mb-3'>
+        <div class='col-sm-12 fade-in col-lg-6 edu-container'>
           <div class='edu-card'>
 
             <div class='d-flex flex-row edu-header'>
