--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
     <!-- ////////////////////////////////CONTACT////////////////////////////////// -->
 
     <footer class='row' id='contact-row'>
-      <h1 class='col-12 fade-in contact section-header'>
+      <h1 id='connect' class='col-12 fade-in contact section-header'>
         Let's Connect
       </h1>
 
